# datamodel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: checks.yml  test.yml
doc/: requirements.txt
schemas/: Connection.json  L2VPN.json  Link.json  Location.json  Node.json  Path.json  Port.json  Service.json  Topology.json
sdx/datamodel/models/: connection.py  link.py  node.py
sdx/datamodel/parsing/: nodehandler.py  porthandler.py  servicehandler.py
sdx/datamodel/sdxdatamodel.egg-info/: PKG-INFO  SOURCES.txt
sdx/datamodel/topologymanager/: grenmlconverter.py  manager.py  temanager.py
sdx/datamodel/validation/: connectionvalidator.py
sdxdatamodel/models/: __init__.py  connection.py  location.py  node.py  port.py  topology.py
sdxdatamodel/parsing/: connectionhandler.py  exceptions.py  linkhandler.py  locationhandler.py  porthandler.py  topologyhandler.py
sdxdatamodel/topologymanager/: grenmlconverter.py  manager.py  temanager.py
sdxdatamodel/validation/: connectionvalidator.py  topologyvalidator.py
src/sdx/datamodel/: __init__.py
src/sdx/datamodel/models/: __init__.py  connection.py  link.py  link_measurement_period.py  location.py  node.py  port.py  service.py  topology.py
src/sdx/datamodel/parsing/: connectionhandler.py  exceptions.py  linkhandler.py  locationhandler.py  nodehandler.py  porthandler.py  servicehandler.py  topologyhandler.py
src/sdx/datamodel/topologymanager/: __init__.py
src/sdx/datamodel/validation/: connectionvalidator.py  topologyvalidator.py
src/sdx_datamodel/: connection_sm.py  constants.py  topology_sm.py  util.py
src/sdx_datamodel/data/requests/: test-l2vpn-p2p-v2.json  test-request-amlight_sax-p2p-v2.json  test_request-amlight_zaoxi-p2p-v2.json  test_request.json  test_request_no_node.json  test_request_p2p.json
src/sdx_datamodel/data/requests/v0/: test_request_no_node.json
src/sdx_datamodel/data/requests/v1.0/: test-request-amlight-zaoxi-p2p.json  test-request-l2vpn-p2p.json  test-request-vlan-translation.json
src/sdx_datamodel/data/topologies/: amlight.json  amlight_link_failure.json  amlight_user_port.json  ampath.json  ampath_v2.json  sax.json  sax_v2.json  sdx.json  zaoxi.json  zaoxi_v2.json
src/sdx_datamodel/models/: __init__.py  api_response.py  base_model_.py  connection.py  connection_qos_metrics.py  connection_qos_unit.py  connection_request.py  connection_scheduling.py  connection_v2.py  link.py  link_measurement_period.py  location.py  node.py  port.py  service.py  topology.py
src/sdx_datamodel/parsing/: connectionhandler.py  exceptions.py  linkhandler.py  locationhandler.py  nodehandler.py  porthandler.py  servicehandler.py  topologyhandler.py
src/sdx_datamodel/validation/: connectionvalidator.py  topologyvalidator.py
tests/: __init__.py  test_connection_handler.py  test_connection_request.py  test_connection_sm.py  test_connection_v2.py  test_connection_validator.py  test_link_handler.py  test_link_measurement_period.py  test_location_handler.py  test_node_handler.py  test_port_handler.py  test_schemas.py  test_service_handler.py  test_te_manager.py  test_topology.py  test_topology_graph.py  test_topology_grenmlconverter.py  test_topology_handler.py  test_topology_handler_v2.py  test_topology_manager.py  test_topology_sm.py  test_topology_validator.py
tests/data/: link.json  location.json  node.json  port-l2vpn-p2p-v2.json  port-l2vpn-ptp-bad-range.json  port-l2vpn-ptp-invalid.json  port-l2vpn-ptp-ptmp-bad.json  port-l2vpn-ptp-ptmp-invalid.json  port-l2vpn-ptp-ptmp.json  port-l2vpn-ptp.json  port.json  port_v2.json  service.json
