[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sdx-datamodel"
version = "2.0.0"
authors = [
    { name = "Y. Xin", email = "yxin@renci.org" }
]
description = "Topology and request description data model in JSON"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "grenml",
    "networkx"
]

[project.urls]
Home = "https://github.com/atlanticwave-sdx/datamodel"
Issues = "https://github.com/atlanticwave-sdx/datamodel/issues"

[project.optional-dependencies]
test = [
    "pytest >= 7.1.2",
    "pytest-cov >= 3.0.0",
    "matplotlib"
]

[options.packages.find]
where = "."

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing"
testpaths = [
    "tests"
]

[tool.black]
# A line length of 79 is flake8's default, so let's go with that.
line-length = 79
src_paths = ["setup.py", "src", "tests"]

[tool.isort]
profile = "black"
src_paths = ["setup.py", "src", "tests"]

[tool.coverage.run]
branch = true
source_pkgs = ["sdx.datamodel"]
omit = ["tests/*"]
relative_files = true

[tool.coverage.paths]
source = [
    # In checkouts.
    "src/",
    # In installed paths.
    "**/site-packages/",
    # In tox environments.
    ".tox/**/site-packages/"
]
