[tool:pytest]
addopts = --cov --cov-report html --cov-report term-missing

[metadata]
name = sdxdatamodel
version = 0.0.1
author = Y. Xin
author_email = yxin@renci.org
description = Topology and request description data model in JSON
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atlanticwave-sdx/datamodel
project_urls =
    Bug Tracker = https://github.com/atlanticwave-sdx/datamodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

python_requires = >=3.6

[options]
packages = find:
include_package_data = True
package_dir =
    = src
install_requires =
    grenml
    networkx

[options.packages.find]
where = src
exclude =
    htmlcov

[options.extras_require]
test =
    matplotlib==3.5.2
    pytest
    pytest-cov
